# qPad

./: CMakeLists.txt  main.cpp  qPad.pro  qpad.cpp  qpad.h  qpad.ui  resource.qrc
